--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "https://twitter-clone-backend-taupe.vercel.app/?vercelToolbarCode=-WRVt_jUZd5HfBt/api",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
